Adjusted spinner size to avoid the elements shifting when it shows/hides

--- a/public/stylesheets/client/convos.less
+++ b/public/stylesheets/client/convos.less
@@ -91,8 +91,8 @@
 			}
 			
 			.pending-spinner{
-				width: 20px;
-				height: 20px;
+				width: 15px;
+				height: 15px;
 			}
 		}
 
